--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[B1] (32)\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import sys \n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,52 +50,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [KC[KH]\n",
-      "DEBUG: Player J lays down [9S[9D[9H] of type 9\n",
-      "DEBUG: Player J discards 5C leaving [7D[7H[8S[AD[AH[KC[KH[QH[QD]\n",
-      "DEBUG: Player J draws [4C[QC]\n",
-      "DEBUG: Player J lays down [QH[QD[QC] of type Q\n",
-      "DEBUG: Player J discards 4C leaving [7D[7H[8S[AD[AH[KC[KH]\n",
-      "DEBUG: Player J draws [4H[4S]\n",
-      "DEBUG: Player J discards 8S leaving [4H[4S[7D[7H[AD[AH[KC[KH]\n",
-      "DEBUG: Player J draws [7C[8H]\n",
-      "DEBUG: Player J lays down [7D[7H[7C] of type 7\n",
-      "DEBUG: Player J discards 8H leaving [4H[4S[AD[AH[KC[KH]\n",
-      "DEBUG: Player J draws [AH[8S]\n",
-      "DEBUG: Player J lays down [AD[AH[AH] of type A\n",
-      "DEBUG: Player J discards 8S leaving [4H[4S[KC[KH]\n",
-      "DEBUG: Player J draws [8D[8H]\n",
-      "DEBUG: Player J discards 4H leaving [4S[8D[8H[KC[KH]\n",
-      "DEBUG: Player J draws [AC[7C]\n",
-      "DEBUG: Player J lays down [7C] of type 7\n",
-      "DEBUG: Player J lays down [AC] of type A\n",
-      "DEBUG: Player J discards 4S leaving [8D[8H[KC[KH]\n",
-      "DEBUG: Player J draws [*R[3C]\n",
-      "DEBUG: Player J discards *R leaving [3C[8D[8H[KC[KH]\n",
-      "DEBUG: Player J draws [KC[AD]\n",
-      "DEBUG: Player J lays down [AD] of type A\n",
-      "DEBUG: Player J lays down [KC[KH[KC] of type K\n",
-      "DEBUG: Player J discards 3C leaving [8D[8H]\n",
-      "DEBUG: Player J draws [AH[8S]\n",
-      "DEBUG: Player J lays down [8D[8H[8S] of type 8\n",
-      "DEBUG: Player J lays down [AH] of type A\n",
-      "DEBUG: Player J picks up their foot and keeps playing!\n",
-      "DEBUG: Player J lays down [8C[8C] of type 8\n",
-      "DEBUG: Player J lays down [9C[9S] of type 9\n",
-      "DEBUG: Player J lays down [AS[AC] of type A\n",
-      "DEBUG: Player J added [AD[AH[AH[AC[AD[AH[AS[AC] to a pile\n",
-      "DEBUG: Player J lays down [QS] of type Q\n",
+      "DEBUG: Player J draws [9D[9C]\n",
+      "DEBUG: Player J lays down [9S[9D[9D[9C] of type 9\n",
+      "DEBUG: Player J discards 3C leaving [*R[*B[2S[4S[6D[JC[KC[TH]\n",
+      "DEBUG: Player J draws [AH[AC]\n",
+      "DEBUG: Player J discards 4S leaving [*R[*B[2S[6D[AH[AC[JC[KC[TH]\n",
+      "DEBUG: Player J draws [3D[JC]\n",
+      "DEBUG: Player J discards 3D leaving [*R[*B[2S[6D[AH[AC[JC[JC[KC[TH]\n",
+      "DEBUG: Player J draws [9H[2H]\n",
+      "DEBUG: Player J lays down [9H] of type 9\n",
+      "DEBUG: Player J discards 6D leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[TH]\n",
+      "DEBUG: Player J draws [QS[4S]\n",
+      "DEBUG: Player J discards 4S leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[QS[TH]\n",
+      "DEBUG: Player J draws [4H[9S]\n",
+      "DEBUG: Player J lays down [9S] of type 9\n",
+      "DEBUG: Player J discards 4H leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[QS[TH]\n",
+      "DEBUG: Player J draws [AS[4D]\n",
+      "DEBUG: Player J lays down [AH[AC[AS] of type A\n",
+      "DEBUG: Player J discards 4D leaving [*R[*B[2S[2H[JC[JC[KC[QS[TH]\n",
+      "DEBUG: Player J draws [KD[JH]\n",
+      "DEBUG: Player J lays down [JC[JC[JH] of type J\n",
+      "DEBUG: Player J discards QS leaving [*R[*B[2S[2H[KC[KD[TH]\n",
+      "DEBUG: Player J draws [AS[8S]\n",
+      "DEBUG: Player J lays down [AS] of type A\n",
+      "DEBUG: Player J discards 8S leaving [*R[*B[2S[2H[KC[KD[TH]\n",
+      "DEBUG: Player J draws [JS[JD]\n",
+      "DEBUG: Player J lays down [JS[JD] of type J\n",
       "DEBUG: Player J laying down with wilds.\n",
-      "DEBUG: Player J lays down [TD[TC[*R] of type T\n",
-      "DEBUG: Player J discards 5C leaving [Empty]\n",
-      "DEBUG: Player J ends the round!\n"
+      "DEBUG: Player J lays down [KC[KD[2H] of type K\n",
+      "DEBUG: Player J adding wilds.\n",
+      "DEBUG: Player J lays down card [2S] of type K\n",
+      "DEBUG: Player J lays down card [*B] of type A\n",
+      "DEBUG: Player J lays down card [*R] of type A\n",
+      "DEBUG: Player J discards TH leaving [Empty]\n",
+      "DEBUG: Player J picks up their foot.\n"
      ]
     },
     {
@@ -97,12 +100,12 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [5C[7D[7H[8S[9S[9D[9H[AD[AH[QH[QD]\n",
+      "hand: [*R[*B[2S[3C[4S[6D[9S[9D[JC[KC[TH]\n",
       "foot: [B2] (11)\n",
       "J:\n",
-      "complete: [AC] (8)\n",
-      "down: [9S[9D[9H[9C[9S]  [QH[QD[QC[QS]  [7D[7H[7C[7C]  [KC[KH[KC]  [8D[8H[8S[8C[8C]  [TD[TC[*R]\n",
-      "hand: [Empty]\n",
+      "complete: \n",
+      "down: [9S[9D[9D[9C[9H[9S]  [AH[AC[AS[AS[*B[*R]  [JC[JC[JH[JS[JD]  [KC[KD[2H[2S]\n",
+      "hand: [2C[3H[4C[5H[8D[8H[AH[JS[QC[TD[TH]\n",
       "foot: [Empty\n"
      ]
     }
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +165,7 @@
        "    height: 20px;\n",
        "    overflow: visible;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/4_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/8_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/8_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -174,7 +177,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃒</span><span style=\"background:white;color:RED\">🂳</span><span style=\"background:white;color:BLACK\">🃔</span><span style=\"background:white;color:RED\">🂵</span><span style=\"background:white;color:RED\">🃈</span><span style=\"background:white;color:RED\">🂸</span><span style=\"background:white;color:RED\">🂱</span><span style=\"background:white;color:BLACK\">🂫</span><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:RED\">🃊</span><span style=\"background:white;color:RED\">🂺</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -187,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Empty]\n"
+      "[2C[3H[4C[5H[8D[8H[AH[JS[QC[TD[TH]\n"
      ]
     }
    ],
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,13 +229,13 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display, HTML\n\u001b[32m      2\u001b[39m s = \u001b[33m\"\"\"\u001b[39m\u001b[33m<style>\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m.pile \u001b[39m\u001b[33m{\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    xdisplay: grid;\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[33m</style>\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#s += '<span class=\"pile\">'\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#for card in g.players[0].get_hand().cards:\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m#    s += (card.get_HTML())\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m#s += '</span>'\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display, HTML\n\u001b[32m      2\u001b[39m s = \u001b[33m\"\"\"\u001b[39m\u001b[33m<style>\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m.pile \u001b[39m\u001b[33m{\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    xdisplay: grid;\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[33m</style>\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#s += '<span class=\"pile\">'\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#for card in g.players[0].get_hand().cards:\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m#    s += (card.get_HTML())\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m#s += '</span>'\u001b[39;00m\n",
       "\u001b[31mImportError\u001b[39m: cannot import name 'display' from 'IPython.core.display' (C:\\Users\\steve\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py)"
      ]
     }
    ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "s = \"\"\"<style>\n",
     ".pile {\n",
     "    xdisplay: grid;\n",
