discard based on desirability

--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[B1] (32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import sys \n",
@@ -23,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -50,47 +42,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [9D[9C]\n",
-      "DEBUG: Player J lays down [9S[9D[9D[9C] of type 9\n",
-      "DEBUG: Player J discards 3C leaving [*R[*B[2S[4S[6D[JC[KC[TH]\n",
-      "DEBUG: Player J draws [AH[AC]\n",
-      "DEBUG: Player J discards 4S leaving [*R[*B[2S[6D[AH[AC[JC[KC[TH]\n",
-      "DEBUG: Player J draws [3D[JC]\n",
-      "DEBUG: Player J discards 3D leaving [*R[*B[2S[6D[AH[AC[JC[JC[KC[TH]\n",
-      "DEBUG: Player J draws [9H[2H]\n",
-      "DEBUG: Player J lays down [9H] of type 9\n",
-      "DEBUG: Player J discards 6D leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[TH]\n",
-      "DEBUG: Player J draws [QS[4S]\n",
-      "DEBUG: Player J discards 4S leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[QS[TH]\n",
-      "DEBUG: Player J draws [4H[9S]\n",
-      "DEBUG: Player J lays down [9S] of type 9\n",
-      "DEBUG: Player J discards 4H leaving [*R[*B[2S[2H[AH[AC[JC[JC[KC[QS[TH]\n",
-      "DEBUG: Player J draws [AS[4D]\n",
-      "DEBUG: Player J lays down [AH[AC[AS] of type A\n",
-      "DEBUG: Player J discards 4D leaving [*R[*B[2S[2H[JC[JC[KC[QS[TH]\n",
-      "DEBUG: Player J draws [KD[JH]\n",
-      "DEBUG: Player J lays down [JC[JC[JH] of type J\n",
-      "DEBUG: Player J discards QS leaving [*R[*B[2S[2H[KC[KD[TH]\n",
-      "DEBUG: Player J draws [AS[8S]\n",
-      "DEBUG: Player J lays down [AS] of type A\n",
-      "DEBUG: Player J discards 8S leaving [*R[*B[2S[2H[KC[KD[TH]\n",
-      "DEBUG: Player J draws [JS[JD]\n",
-      "DEBUG: Player J lays down [JS[JD] of type J\n",
-      "DEBUG: Player J laying down with wilds.\n",
-      "DEBUG: Player J lays down [KC[KD[2H] of type K\n",
-      "DEBUG: Player J adding wilds.\n",
-      "DEBUG: Player J lays down card [2S] of type K\n",
-      "DEBUG: Player J lays down card [*B] of type A\n",
-      "DEBUG: Player J lays down card [*R] of type A\n",
-      "DEBUG: Player J discards TH leaving [Empty]\n",
-      "DEBUG: Player J picks up their foot.\n"
+      "DEBUG: Player J draws [3S[JC]\n",
+      "DEBUG: Player J lays down [JS[JD[JC] of type J\n",
+      "DEBUG: Player J discards 2C leaving [3D[3S[8S[AS[AD[KH[KS[QD[TS]\n",
+      "DEBUG: Player J draws [TS[JS]\n",
+      "DEBUG: Player J lays down [JS] of type J\n",
+      "DEBUG: Player J discards 8S leaving [3D[3S[AS[AD[KH[KS[QD[TS[TS]\n",
+      "DEBUG: Player J draws [JD[TD]\n",
+      "DEBUG: Player J lays down [JD] of type J\n",
+      "DEBUG: Player J lays down [TS[TS[TD] of type T\n",
+      "DEBUG: Player J discards QD leaving [3D[3S[AS[AD[KH[KS]\n",
+      "DEBUG: Player J draws [7C[3C]\n",
+      "DEBUG: Player J lays down [3D[3S[3C] of type 3\n",
+      "DEBUG: Player J discards 7C leaving [AS[AD[KH[KS]\n",
+      "DEBUG: Player J draws [9C[3C]\n",
+      "DEBUG: Player J lays down [3C] of type 3\n",
+      "DEBUG: Player J discards 9C leaving [AS[AD[KH[KS]\n",
+      "DEBUG: Player J draws [8S[7C]\n",
+      "DEBUG: Player J discards 7C leaving [8S[AS[AD[KH[KS]\n",
+      "DEBUG: Player J draws [8D[8H]\n",
+      "DEBUG: Player J lays down [8S[8D[8H] of type 8\n",
+      "DEBUG: Player J discards AS leaving [AD[KH[KS]\n",
+      "DEBUG: Player J draws [KD[TD]\n",
+      "DEBUG: Player J lays down [KH[KS[KD] of type K\n",
+      "DEBUG: Player J lays down [TD] of type T\n",
+      "DEBUG: Player J discards AD leaving [Empty]\n",
+      "DEBUG: Player J picks up their foot.\n",
+      "DEBUG: Player J draws [AD[2C]\n",
+      "DEBUG: Player J lays down [3C] of type 3\n",
+      "DEBUG: Player J lays down [4C[4D[4S[4D] of type 4\n",
+      "DEBUG: Player J lays down [6H[6S[6D] of type 6\n",
+      "DEBUG: Player J discards 2C leaving [9S[AD[QC[QS]\n",
+      "DEBUG: Player J draws [JH[6D]\n",
+      "DEBUG: Player J lays down [6D] of type 6\n",
+      "DEBUG: Player J lays down [JH] of type J\n",
+      "DEBUG: Player J discards 9S leaving [AD[QC[QS]\n"
      ]
     },
     {
@@ -100,12 +93,12 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [*R[*B[2S[3C[4S[6D[9S[9D[JC[KC[TH]\n",
-      "foot: [B2] (11)\n",
+      "hand: [2C[3D[8S[AS[AD[JS[JD[KH[KS[QD[TS]\n",
+      "foot: [R6] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [9S[9D[9D[9C[9H[9S]  [AH[AC[AS[AS[*B[*R]  [JC[JC[JH[JS[JD]  [KC[KD[2H[2S]\n",
-      "hand: [2C[3H[4C[5H[8D[8H[AH[JS[QC[TD[TH]\n",
+      "down: [JS[JD[JC[JS[JD[JH]  [TS[TS[TD[TD]  [3D[3S[3C[3C[3C]  [8S[8D[8H]  [KH[KS[KD]  [4C[4D[4S[4D]  [6H[6S[6D[6D]\n",
+      "hand: [AD[QC[QS]\n",
       "foot: [Empty\n"
      ]
     }
@@ -121,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +158,7 @@
        "    height: 20px;\n",
        "    overflow: visible;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/4_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/8_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/8_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -177,7 +170,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃒</span><span style=\"background:white;color:RED\">🂳</span><span style=\"background:white;color:BLACK\">🃔</span><span style=\"background:white;color:RED\">🂵</span><span style=\"background:white;color:RED\">🃈</span><span style=\"background:white;color:RED\">🂸</span><span style=\"background:white;color:RED\">🂱</span><span style=\"background:white;color:BLACK\">🂫</span><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:RED\">🃊</span><span style=\"background:white;color:RED\">🂺</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:BLACK\">🂭</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -190,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2C[3H[4C[5H[8D[8H[AH[JS[QC[TD[TH]\n"
+      "[AD[QC[QS]\n"
      ]
     }
    ],
@@ -219,18 +212,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'display' from 'IPython.core.display' (C:\\Users\\steve\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display, HTML\n\u001b[32m      2\u001b[39m s = \u001b[33m\"\"\"\u001b[39m\u001b[33m<style>\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m.pile \u001b[39m\u001b[33m{\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    xdisplay: grid;\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[33m</style>\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#s += '<span class=\"pile\">'\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#for card in g.players[0].get_hand().cards:\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m#    s += (card.get_HTML())\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m#s += '</span>'\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'display' from 'IPython.core.display' (C:\\Users\\steve\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py)"
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".pile {\n",
+       "    xdisplay: grid;\n",
+       "    xgrid-auto-flow: column;\n",
+       "    xgrid-template-column: 15px;\n",
+       "}\n",
+       ".cardtable_card {\n",
+       "    xgrid-row: 1;\n",
+       "    width: 70px;\n",
+       "    overflow-x: hidden;\n",
+       "}\n",
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<style>\n",
+      ".pile {\n",
+      "    xdisplay: grid;\n",
+      "    xgrid-auto-flow: column;\n",
+      "    xgrid-template-column: 15px;\n",
+      "}\n",
+      ".cardtable_card {\n",
+      "    xgrid-row: 1;\n",
+      "    width: 70px;\n",
+      "    overflow-x: hidden;\n",
+      "}\n",
+      "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>\n"
      ]
     }
    ],
@@ -255,12 +278,13 @@
     "s += g.players[0].get_hand().get_HTML()\n",
     "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
     "display(HTML(s))\n",
+    "print(s)\n",
     "#print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
