value pairs higher than singletons

--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[B1] (32)\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import sys \n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,48 +50,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [3S[JC]\n",
-      "DEBUG: Player J lays down [JS[JD[JC] of type J\n",
-      "DEBUG: Player J discards 2C leaving [3D[3S[8S[AS[AD[KH[KS[QD[TS]\n",
-      "DEBUG: Player J draws [TS[JS]\n",
-      "DEBUG: Player J lays down [JS] of type J\n",
-      "DEBUG: Player J discards 8S leaving [3D[3S[AS[AD[KH[KS[QD[TS[TS]\n",
-      "DEBUG: Player J draws [JD[TD]\n",
-      "DEBUG: Player J lays down [JD] of type J\n",
-      "DEBUG: Player J lays down [TS[TS[TD] of type T\n",
-      "DEBUG: Player J discards QD leaving [3D[3S[AS[AD[KH[KS]\n",
-      "DEBUG: Player J draws [7C[3C]\n",
-      "DEBUG: Player J lays down [3D[3S[3C] of type 3\n",
-      "DEBUG: Player J discards 7C leaving [AS[AD[KH[KS]\n",
-      "DEBUG: Player J draws [9C[3C]\n",
-      "DEBUG: Player J lays down [3C] of type 3\n",
-      "DEBUG: Player J discards 9C leaving [AS[AD[KH[KS]\n",
-      "DEBUG: Player J draws [8S[7C]\n",
-      "DEBUG: Player J discards 7C leaving [8S[AS[AD[KH[KS]\n",
-      "DEBUG: Player J draws [8D[8H]\n",
-      "DEBUG: Player J lays down [8S[8D[8H] of type 8\n",
-      "DEBUG: Player J discards AS leaving [AD[KH[KS]\n",
-      "DEBUG: Player J draws [KD[TD]\n",
-      "DEBUG: Player J lays down [KH[KS[KD] of type K\n",
-      "DEBUG: Player J lays down [TD] of type T\n",
-      "DEBUG: Player J discards AD leaving [Empty]\n",
-      "DEBUG: Player J picks up their foot.\n",
-      "DEBUG: Player J draws [AD[2C]\n",
-      "DEBUG: Player J lays down [3C] of type 3\n",
-      "DEBUG: Player J lays down [4C[4D[4S[4D] of type 4\n",
-      "DEBUG: Player J lays down [6H[6S[6D] of type 6\n",
-      "DEBUG: Player J discards 2C leaving [9S[AD[QC[QS]\n",
-      "DEBUG: Player J draws [JH[6D]\n",
-      "DEBUG: Player J lays down [6D] of type 6\n",
-      "DEBUG: Player J lays down [JH] of type J\n",
-      "DEBUG: Player J discards 9S leaving [AD[QC[QS]\n"
+      "DEBUG: Player J draws [3S[7C]\n",
+      "DEBUG: Player J lays down [4S[4D[4H] of type 4\n",
+      "DEBUG: Player J discards 3S leaving [2D[5C[7C[7C[8S[AD[KH[QD[TD]\n",
+      "DEBUG: Player J draws [TC[5D]\n",
+      "DEBUG: Player J discards 8S leaving [2D[5C[5D[7C[7C[AD[KH[QD[TD[TC]\n",
+      "DEBUG: Player J draws [*B[2H]\n",
+      "DEBUG: Player J discards 7C leaving [*B[2D[2H[5C[5D[7C[AD[KH[QD[TD[TC]\n",
+      "DEBUG: Player J draws [KS[9S]\n",
+      "DEBUG: Player J discards 9S leaving [*B[2D[2H[5C[5D[7C[AD[KH[KS[QD[TD[TC]\n",
+      "DEBUG: Player J draws [4D[7H]\n",
+      "DEBUG: Player J lays down [4D] of type 4\n",
+      "DEBUG: Player J discards 7H leaving [*B[2D[2H[5C[5D[7C[AD[KH[KS[QD[TD[TC]\n",
+      "DEBUG: Player J draws [9H[5S]\n",
+      "DEBUG: Player J lays down [5C[5D[5S] of type 5\n",
+      "DEBUG: Player J discards 9H leaving [*B[2D[2H[7C[AD[KH[KS[QD[TD[TC]\n",
+      "DEBUG: Player J draws [3D[KC]\n",
+      "DEBUG: Player J lays down [KH[KS[KC] of type K\n",
+      "DEBUG: Player J discards 3D leaving [*B[2D[2H[7C[AD[QD[TD[TC]\n",
+      "DEBUG: Player J draws [4S[JH]\n",
+      "DEBUG: Player J lays down [4S] of type 4\n",
+      "DEBUG: Player J discards 7C leaving [*B[2D[2H[AD[JH[QD[TD[TC]\n",
+      "DEBUG: Player J draws [KH[QC]\n",
+      "DEBUG: Player J lays down [KH] of type K\n",
+      "DEBUG: Player J discards TC leaving [*B[2D[2H[AD[JH[QD[QC[TD]\n",
+      "DEBUG: Player J draws [QC[QS]\n",
+      "DEBUG: Player J lays down [QD[QC[QC[QS] of type Q\n",
+      "DEBUG: Player J discards TD leaving [*B[2D[2H[AD[JH]\n"
      ]
     },
     {
@@ -93,13 +93,13 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [2C[3D[8S[AS[AD[JS[JD[KH[KS[QD[TS]\n",
-      "foot: [R6] (11)\n",
+      "hand: [2D[4S[4D[4H[5C[7C[8S[AD[KH[QD[TD]\n",
+      "foot: [B3] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [JS[JD[JC[JS[JD[JH]  [TS[TS[TD[TD]  [3D[3S[3C[3C[3C]  [8S[8D[8H]  [KH[KS[KD]  [4C[4D[4S[4D]  [6H[6S[6D[6D]\n",
-      "hand: [AD[QC[QS]\n",
-      "foot: [Empty\n"
+      "down: [4S[4D[4H[4D[4S]  [5C[5D[5S]  [KH[KS[KC[KH]  [QD[QC[QC[QS]\n",
+      "hand: [*B[2D[2H[AD[JH]\n",
+      "foot: [B3] (11)\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "    height: 20px;\n",
        "    overflow: visible;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:BLACK\">🂭</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃟</span><span style=\"background:white;color:RED\">🃂</span><span style=\"background:white;color:RED\">🂲</span><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:RED\">🂻</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[AD[QC[QS]\n"
+      "[*B[2D[2H[AD[JH]\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -253,7 +253,7 @@
       "    width: 70px;\n",
       "    overflow-x: hidden;\n",
       "}\n",
-      "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span></span>\n"
+      "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
